# Koster-Common

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  README.md
.github/workflows/: unit-tests.yml
cmake/: code_generator.cmake  generate_parameters.cmake
codegenerators/: default_recipes.py  parameters.py
config/: default_recipes.xml  parameters.xml
include/koster-common/: alarm.h  koster-settings.h  koster-zbus.h  parameters_base.h  program_history.h  program_history_persistence.h  program_logger.h  recipe.h  rtc.h
src/: alarm.c  default_recipes.c  default_recipes.h  koster-common.c  koster-settings.c  koster-zbus.c  parameters_base.c  parameters_private.h  program_history_persistence.c  program_logger.c  recipe.c  recipe_types.h  rtc.c
tests/unit/: CMakeLists.txt
tests/unit/alarm/: CMakeLists.txt  alarm_tests.cpp
tests/unit/default_recipes/: CMakeLists.txt  default_recipes_tests.cpp  test_default_recipes.xml  test_default_recipes_parameters.xml
tests/unit/include/zephyr/: kernel.c  kernel.h
tests/unit/include/zephyr/logging/: log.h
tests/unit/include/zephyr/settings/: settings.c  settings.h
tests/unit/include/zephyr/sys/: util.h
tests/unit/include/zephyr/zbus/: zbus.c  zbus.h
tests/unit/parameters/: CMakeLists.txt  parameters_tests.cpp  test_parameters.xml
tests/unit/recipe/: CMakeLists.txt  recipe_tests.cpp  test_default_recipes.xml
zephyr/: module.yml
